--- a/views/users/coordinators.ejs
+++ b/views/users/coordinators.ejs
@@ -9,21 +9,20 @@
             <table class="table table-striped table-bordered table-sm">
                 <thead class="thead-dark">
                     <tr>
-                        <th>ID</th>
-                        <th>Username</th>
-                        <th>Email</th>
-                        <th>Actions</th>
+                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
+                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Username</th>
+                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Email</th>
+                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
                     <% coordinators.forEach(coordinator => { %>
                     <tr>
-                        <td><%= coordinator.id %></td>
+                        <td style="text-align: center;"><%= coordinator.id %></td>
                         <td><a href="/users/<%= coordinator.id %>" style="color: blue;"><%= coordinator.User.username %></a></td>
                         <td><%= coordinator.User.email %></td>
-                        <td>
+                        <td style="text-align: center;">
                             <div class="btn-group">
-                                <a href="/users/<%= coordinator.id %>/timeslots" class="btn btn-outline-dark btn-sm btn-white mr-1">TimeSlots</a>
                                 <a href="/users/<%= coordinator.id %>/edit" class="btn btn-outline-dark btn-sm btn-white mr-1">Edit</a>
                                 <a href="/users/<%= coordinator.id %>/delete" class="btn btn-outline-dark btn-sm btn-white">Delete</a>
                             </div>
