--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -50,15 +50,10 @@
                     </tr>
 
                     </tr>
-                    <% if (user.admin_id) { %>
+                    <% if (userRole === 'Interpreter') { %>
                         <tr>
-                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Is Admin:</th>
-                            <td>Yes</td>
-                        </tr>
-                    <% } else { %>
-                        <tr>
-                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Is Admin:</th>
-                            <td>No</td>
+                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Reputation:</th>
+                            <td><%= user.interpreters.reputation.value %></td>
                         </tr>
                     <% } %>
                 
@@ -74,45 +69,7 @@
             <div class="col-md-6">
                 <br>
                 <br>
-                <% if (userRole === 'Interpreter') { %>
-                    <h4 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Reputation</h4>
-                    <table class="table table-borderless mt-4">
-                        <tr>
-                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Value:</th>
-                            <td>PENDIENTE</td>
-                        </tr>
-                        <tr>
-                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Votes sent:</th>
-                            <td>PENDIENTE</td>
-                        </tr>
-                        <tr>
-                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Votes received:</th>
-                            <td>PENDIENTE</td>
-                        </tr>
-
-                    </table>
-                    <!-- CAMBIAR RUTA -->
-                    <a href="/editProfile/<%= user.id %>" class="btn btn-secondary">Reviews</a>
-
-                <% } else { %>
-                    <h4 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Likes</h4>
-                    <table class="table table-borderless mt-4">
-                        <tr>
-                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Value:</th>
-                            <td>PENDIENTE</td>
-                        </tr>
-                        <tr>
-                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Votes sent:</th>
-                            <td>PENDIENTE</td>
-                        </tr>
-                        <tr>
-                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Votes received:</th>
-                            <td>PENDIENTE</td>
-                        </tr>
-                    </table>
-                    <!-- CAMBIAR RUTA -->
-                    <a href="/editProfile/<%= user.id %>" class="btn btn-primary">Reviews</a>
-                <% } %>
+                
                     
 
             </div>
@@ -155,10 +112,36 @@
                 </div>
     
             </div>
-           
-
         <% } %>
 
+        <br>        
+        <hr class="my-4">
+
+        <!-- Tabla Likes -->
+        <div>
+            <h4 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Likes</h4>    
+            <table class="table table-striped table-bordered table-sm">
+                    
+                <thead class="thead-dark">
+                    <tr>
+                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; width: 10%;">Room ID</th>
+                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; width: 10%;">Value</th>
+                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Details</th>                           
+                    </tr>
+                </thead>
+                
+                <tbody>
+                    <% likes.forEach(like => { %>
+                        <tr>
+                            <td style="text-align: center;"><%= like.room_id %></td>
+                            <td style="text-align: center;"><%= like.value %></td>
+                            <td><%= like.details %></td>
+                        </tr>
+                    <% }); %>
+                </tbody>
+                
+            </table> 
+        </div>
         <br>
         <br>
 
@@ -171,6 +154,10 @@
         </div>
     </div>
 
+    <br>
+    <br>
+    <br>
+    <br>
 
 
     <!-- Bootstrap JS -->
