--- a/views/users/technicians.ejs
+++ b/views/users/technicians.ejs
@@ -9,10 +9,10 @@
             <table class="table table-striped table-bordered table-sm">
                 <thead class="thead-dark">
                     <tr>
-                        <th>ID</th>
-                        <th>Username</th>
-                        <th>Email</th>
-                        <th>Actions</th>
+                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
+                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Username</th>
+                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Email</th>
+                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -23,7 +23,6 @@
                         <td><%= technician.User.email %></td>
                         <td>
                             <div class="btn-group">
-                                <a href="/users/<%= technician.id %>/timeslots" class="btn btn-outline-dark btn-sm btn-white mr-1">TimeSlots</a>
                                 <a href="/users/<%= technician.id %>/edit" class="btn btn-outline-dark btn-sm btn-white mr-1">Edit</a>
                                 <a href="/users/<%= technician.id %>/delete" class="btn btn-outline-dark btn-sm btn-white">Delete</a>
                             </div>
