--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -120,27 +120,32 @@
         <!-- Tabla Likes -->
         <div>
             <h4 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Likes</h4>    
-            <table class="table table-striped table-bordered table-sm">
-                    
-                <thead class="thead-dark">
-                    <tr>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; width: 10%;">Room ID</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; width: 10%;">Value</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Details</th>                           
-                    </tr>
-                </thead>
-                
-                <tbody>
-                    <% likes.forEach(like => { %>
+            <% if (likes && likes.length > 0) { %>
+                <table class="table table-striped table-bordered table-sm">
+                        
+                    <thead class="thead-dark">
                         <tr>
-                            <td style="text-align: center;"><%= like.room_id %></td>
-                            <td style="text-align: center;"><%= like.value %></td>
-                            <td><%= like.details %></td>
+                            <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; width: 10%;">Room ID</th>
+                            <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; width: 10%;">Value</th>
+                            <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Details</th>                           
                         </tr>
-                    <% }); %>
-                </tbody>
-                
-            </table> 
+                    </thead>
+                    
+                    <tbody>
+                        <% likes.forEach(like => { %>
+                            <tr>
+                                <td style="text-align: center;"><%= like.room_id %></td>
+                                <td style="text-align: center;"><%= like.value %></td>
+                                <td><%= like.details %></td>
+                            </tr>
+                        <% }); %>
+                    </tbody>
+                    
+                </table> 
+            <% } else { %>
+                <br>
+                <h5 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">You have not received any likes yet.</h5>
+            <% } %>
         </div>
         <br>
         <br>
