--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -12,11 +12,13 @@
 <body>
     <div class="container mt-5">
         <h2 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">User Profile</h2>
+        <br>
+        <br>
         <div class="row">
             <!-- Columna izquierda -->
             <div class="col-md-6">
+                <h4 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Details</h4>
                 
-                <br>
                 <table class="table table-borderless mt-4">
                     <tr>
                         <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Username:</th>
@@ -49,13 +51,16 @@
                         </td>
                     </tr>
 
-                    </tr>
                     <% if (userRole === 'Interpreter') { %>
                         <tr>
                             <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Reputation:</th>
                             <td><%= user.interpreters.reputation.value %></td>
                         </tr>
                     <% } %>
+
+                <td>
+                    <a href="/users/<%= user.id %>/editProfile" class="btn btn-primary btn-sm">Edit Details</a>
+                </td>
                 
                 </table>
                 
@@ -67,10 +72,75 @@
 
             <!-- Columna derecha -->
             <div class="col-md-6">
-                <br>
-                <br>
                 
-                    
+                <h4 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Schedule</h4>
+                
+                <table class="table table-borderless mt-4">
+
+                    <tr>
+                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px; width: 25%;">Monday:</th>
+                        <% if (TSMonday) { %>
+                            <td><%= TSMonday.start_time.slice(0, -3) %> - <%= TSMonday.end_time.slice(0, -3) %> h</td>
+                        <% } else { %>
+                            <td>Not available</td>
+                        <% } %>
+                    </tr>
+                    <tr>
+                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px; width: 25%;">Tuesday:</th>
+                        <% if (TSTuesday) { %>
+                            <td><%= TSTuesday.start_time.slice(0, -3) %> - <%= TSTuesday.end_time.slice(0, -3) %> h</td>
+                        <% } else { %>
+                            <td>Not available</td>
+                        <% } %>
+                    </tr>
+                    <tr>
+                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px; width: 25%;">Wednesday:</th>
+                        <% if (TSWednesday) { %>
+                            <td><%= TSWednesday.start_time.slice(0, -3) %> - <%= TSWednesday.end_time.slice(0, -3) %> h</td>
+                        <% } else { %>
+                            <td>Not available</td>
+                        <% } %>
+                    </tr>
+                    <tr>
+                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px; width: 25%;">Thursday:</th>
+                        <% if (TSThursday) { %>
+                            <td><%= TSThursday.start_time.slice(0, -3) %> - <%= TSThursday.end_time.slice(0, -3) %> h</td>
+                        <% } else { %>
+                            <td>Not available</td>
+                        <% } %>
+                    </tr>
+                    <tr>
+                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px; width: 25%;">Friday:</th>
+                        <% if (TSFriday) { %>
+                            <td><%= TSFriday.start_time.slice(0, -3) %> - <%= TSFriday.end_time.slice(0, -3) %> h</td>
+                        <% } else { %>
+                            <td>Not available</td>
+                        <% } %>
+                    </tr>
+                    <tr>
+                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px; width: 25%;">Saturday:</th>
+                        <% if (TSSaturday) { %>
+                            <td><%= TSSaturday.start_time.slice(0, -3) %> - <%= TSSaturday.end_time.slice(0, -3) %> h</td>
+                        <% } else { %>
+                            <td>Not available</td>
+                        <% } %>
+                    </tr>
+                    <tr>
+                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px; width: 25%;">Sunday:</th>
+                        <% if (TSSunday) { %>
+                            <td><%= TSSunday.start_time.slice(0, -3) %> - <%= TSSunday.end_time.slice(0, -3) %> h</td>
+                        <% } else { %>
+                            <td>Not available</td>
+                        <% } %>                        
+                    </tr>
+
+                    <td>
+                        <a href="/users/<%= user.id %>/manageSchedule" class="btn btn-secondary btn-sm">Manage Schedule</a>
+                    </td>
+                
+                </table>
+                
+                <br>
 
             </div>
         </div>
@@ -153,7 +223,6 @@
 
         <!-- Botones -->
         <div class="mt-3" style="text-align: center;">
-            <a href="/users/<%= user.id %>/editProfile" class="btn btn-primary">Edit Profile</a>
             <a href="/users/<%= user.id %>/delete" class="btn btn-danger">Delete User</a>
             <a href="javascript:history.go(-1)" class="btn btn-secondary">Back</a>
         </div>
