--- a/views/users/operators.ejs
+++ b/views/users/operators.ejs
@@ -21,7 +21,7 @@
                         <td><%= operator.id %></td>
                         <td><a href="/users/<%= operator.id %>" style="color: blue;"><%= operator.User.username %></a></td>
                         <td><%= operator.User.email %></td>
-                        <td>
+                        <td style="text-align: center;">
                             <div class="btn-group">
                                 <a href="/users/<%= operator.id %>/edit" class="btn btn-outline-dark btn-sm btn-white mr-1">Edit</a>
                                 <a href="/users/<%= operator.id %>/delete" class="btn btn-outline-dark btn-sm btn-white">Delete</a>
