--- a/views/users/technicians.ejs
+++ b/views/users/technicians.ejs
@@ -21,7 +21,7 @@
                         <td><%= technician.id %></td>
                         <td><a href="/users/<%= technician.id %>" style="color: blue;"><%= technician.User.username %></a></td>
                         <td><%= technician.User.email %></td>
-                        <td>
+                        <td  style="text-align: center;">
                             <div class="btn-group">
                                 <a href="/users/<%= technician.id %>/edit" class="btn btn-outline-dark btn-sm btn-white mr-1">Edit</a>
                                 <a href="/users/<%= technician.id %>/delete" class="btn btn-outline-dark btn-sm btn-white">Delete</a>
